--- a/frontend/templates/main.html
+++ b/frontend/templates/main.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/main.css">
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Document</title>
 </head>
 <body>
-    <div>Hello, World</div>
-    <button id="btn1">click me</button>
+    <div class="flex bg-red-400 h-screen w-full container">
+        <div class="text-2xl">Hello, World</div>
+        <button id="btn1">click me</button>
+    </div>
     <script src="../node_modules/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="../components/main.js"></script>
 </body>
