some templates added, created userProfile backend

--- a/frontend/templates/errorRegistration.html
+++ b/frontend/templates/errorRegistration.html
@@ -6,12 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <div><h1>User exists</h1></div>
-    <button id="btn1">registeration</button>
+    <div><h1>User exists!</h1></div>
+    <button id="btn1">try again</button>
     <script src="../node_modules/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="../components/main.js"></script>
 </body>
 <script>
-    window.alert("registeration failed try again")
+    window.alert("registration failed try again")
 </script>
 </html>
