--- a/frontend/main /style.css
+++ b/frontend/main /style.css
@@ -49,7 +49,7 @@ nav{
     padding: 2% 6%;
     justify-content: space-between;
     align-items: center;
-
+    background-color: rgb(231, 231, 231);
 
 }
 
