--- a/backend/static/styles/main.css
+++ b/backend/static/styles/main.css
@@ -1,4 +1,4 @@
-*{
+    *{
     margin: 0;
     padding: 0;
     font-family: roboto, Arial, Helvetica, sans-serif;
@@ -9,7 +9,7 @@
     min-height: 60vh;
     width: 100%;
     background-image: linear-gradient(rgba(92, 93, 116, 0.7),rgba(60, 59, 75, 0.2)), 
-    url(pics/banner.jpg);
+    url("../pics/banner.jpg");
     background-position: center;
     background-size: cover;
     position: relative;
@@ -317,4 +317,38 @@ h3{
 .layer:hover h3{
     bottom: 45%;    
     opacity: 1;
+}
+.product-list{
+    display: grid;
+    gap: 10px;
+    grid-template-columns: repeat(4, 1fr);
+}
+.product-item {
+    display: block;
+    background-color: #f9f9f9;
+    padding: 10px;
+    border-radius: 8px;
+    width: 250px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.product-image {
+    background-color: #ddd;
+    width: 100%;
+    height: 320px;
+    margin-bottom: 10px;
+}
+
+.product-details h3 {
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+
+.product-details p {
+    font-size: 16px;
+    color: #555;
 }
