commiting the update to date coe

--- a/frontend/templates/authorization/register.html
+++ b/frontend/templates/authorization/register.html
@@ -19,9 +19,22 @@
                     <input type="text" name="name" placeholder="Name">
                     <label for="email">E-mail</label>
                     <input type="email" name="email" placeholder="E-mail">
+                    <label for="role">Choose Role</label>
+                    <select name="role">
+                        <option value="normal_user">Normal user</option>
+                        <option value="seller">Seller</option>
+                    </select>
+                    <label for="street">Street</label>
+                    <input type="text" name="street" placeholder="street">
+                    <label for="house_number">House number</label>
+                    <input type="text" name="house_number" placeholder="house number">
+                    <label for="postel_code">Postel code</label>
+                    <input type="text" name="postel_code" placeholder="postel code">
                     <label for="city">City</label>
                     <input type="text" name="city" placeholder="city">
-                    <label for="birthdate">Set a password</label>
+                    <label for="country">Country</label>
+                    <input type="text" name="country" placeholder="country">
+                    <label for="birthdate">Date of birth</label>
                     <input type="date" name="birthdate" placeholder="birthdate">
                     <label for="password">Set a password</label>
                     <input type="password" name="password" placeholder="Set a password">
