--- a/backend/static/styles/main.css
+++ b/backend/static/styles/main.css
@@ -318,6 +318,16 @@ h3{
     bottom: 45%;    
     opacity: 1;
 }
+.category-list{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 8px;
+}
+.category-list li{
+    margin: 15px;
+    font-size: 17px;
+}
 .product-list{
     display: grid;
     gap: 10px;
@@ -351,4 +361,26 @@ h3{
 .product-details p {
     font-size: 16px;
     color: #555;
+}
+.form-category{
+    display: grid;
+    gap: 30px;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: center;
+    align-items: center;
+    max-width: 1330px;
+}
+.category-filter{
+    display: grid;
+    gap: 10px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin: 20px 0px;
+}
+.filter-btn{
+    background-color: #181e2b;
+    color: #ddd;
+    padding: 9px;
 }
