--- a/frontend/templates/main/index.html
+++ b/frontend/templates/main/index.html
@@ -26,6 +26,7 @@
                     <button type="submit">&#128269;</button>
                 </form>
                 <div style="display:flex;justify-content:end; text-align:end;" >
+                    <button id="user-profile" style="display: none;">Profile</button>
                     <a href="/wishlist" class="nav_icon"><img src="{{ url_for('static',filename='pics/wishlist.PNG') }}" alt="User Icon" style="width: 95%;"></a>
                     <a href="/cart" class="nav_icon"><img src="{{ url_for('static',filename='pics/cart.PNG') }}" alt="User Icon" style="width: 100%;" /><div id="cart_items_total"></div></a>
                     <a href="/login" class="nav_icon" id="logged_in"><img src="{{ url_for('static',filename='pics/user.jpeg') }}" alt="User Icon" style="width: 90%;"></a>
